Return empty lists instead of 404, and quieten Dependabot
Seven collection endpoints threw a not-found exception when no rows
matched, so a patient with no diagnoses yet looked like an error. They
now return an empty list. Single record lookups still answer 404.

Dependabot no longer proposes npm major bumps, which only break the
React 16 build until the frontend migration lands.